# Hackathons

./: README.md
HSE_12_22/: README.md  project.ipynb
Lenta/: README.md  lenta_x_hackathon_preprocessing_and_modelling_by_ds_team_17.ipynb
Lenta/for_docker_image/: Dockerfile  pyproject.toml
Lenta/for_docker_image/src/: app.py  requirements.txt
Lenta/for_docker_image/src/predictions/: prediction.py  result_train_model.csv
Lenta/for_docker_image/src/preprocessing/: data_mart.py  for_unknown.py  get_preprocess_data.py  lags_and_windows.py  time_preprocess.py
Lenta/for_docker_image/src/preprocessing/dictionaries/: item_dict.pkl  last_sale_type.pkl  most_popluar_item.pkl  store_dict.pkl  weight.pkl
Lenta/for_docker_image/src/test/: test.py
YM_hackathon_Jun2023/: README.md  preprocessing_data_and_train_model.py  yandex_hackathon_eda_by_ds_team_4.ipynb  yandex_hackathon_modelling_by_ds_team_4.ipynb  yandex_hackathon_preproseccing_by_ds_team_4.ipynb  yandex_hackathon_result_by_ds_team_4.ipynb
YM_hackathon_Jun2023/for_docker_images/: pyproject.toml
YM_hackathon_Jun2023/for_docker_images/src/: app.py  preprocessing.py  requirements.txt
YM_hackathon_Jun2023/for_docker_images/src/models/: columns_to_drop  model.py  target.csv
YM_hackathon_Jun2023/for_docker_images/src/preprocessed_data/: columns_to_drop
YM_hackathon_Jun2023/for_docker_images/src/test/: test.py
YM_hackathon_Jun2023/for_docker_images/src/test/data_for_test/: data_for_test.csv  data_for_test_3.csv
Yandex_music_2023/: README.md  yandex_music_modelling_clf_by_team_13.ipynb  (+2 more)
(+16 files in other folders)
