[tool.poetry]
name = "lenta"
version = "1.0"
description = "an application for predicting the number of own products in the store"
authors = ["DS17"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.103.2"
requests = "^2.31.0"

scipy = ">=1.10.1,<1.11.0"
pycaret = "^3.0.0"
scikit-learn = ">=1.0,<1.3.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
plotly-resampler = ">=0.9.1,<0.10.0"
numpy = ">=1.21,<1.25"
pandas = "^1.3.3"
kaleido = "0.2.1"
lightgbm = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
